# sft

./: .rustfmt.toml  Cargo.toml  NOTES
example-assets/: out.dot  subgraph.jsonl  subgraph2.html  subgraph2.jsonl  subgraph3.jsonl  test_src_notes.txt
kythe-bridge/: Cargo.toml
kythe-bridge/src/: dv8.rs  ir.rs  main.rs
kythe-bridge/src/commands/: dsm.rs  mod.rs
kythe-runner/: Cargo.toml
kythe-runner/src/: main.rs
sft/: Cargo.toml
sft/src/: index_map.rs  main.rs  prelude.rs  preprocessing.rs
src/: base.rs  collections.rs  data_structures.rs  dv8.rs  io.rs  ir.rs  kythe.rs  main.rs  main2.rs  main4.rs  path_filtering.rs  util.rs
src/commands/: display.rs  dsm.rs  edgekinds.rs  exclude.rs  format.rs  html.rs  mod.rs  summarize.rs
