[package]
name = "kythe-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.14", features = ["derive", "cargo"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
bimap = "0.6.2"
base64 = "0.13.0"
globset = "0.4.9"
log = "0.4.17"
stderrlog = "0.5.3"
dot-writer = "0.1.2"
itertools = "0.10.3"
anyhow = "1.0.31"
thiserror = "1.0.32"
tinytemplate = "1.2.1"
tabled = "0.7.0"