[package]
name = "kythe-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "3.2.14", features = ["derive", "cargo"] }
clap-verbosity-flag = "1.0.1"
anyhow = "1.0.31"
rand = "0.8.5"
sled = "0.34.7"
glob = "0.3.0"
itertools = "0.10.3"
colored = "2"